INCLUDES = -I$(srcdir)/.. $(all_includes)
METASOURCES = AUTO
libkademlia_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libkademlia.la
noinst_HEADERS = key.h node.h kbucket.h rpccall.h rpcserver.h database.h dht.h \
		rpcmsg.h kclosestnodessearch.h
libkademlia_la_SOURCES = key.cpp node.cpp kbucket.cpp rpccall.cpp rpcserver.cpp \
		database.cpp dht.cpp rpcmsg.cpp kclosestnodessearch.cpp
