INCLUDES = -I$(srcdir)/.. $(all_includes)
METASOURCES = AUTO
libmigrate_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libmigrate.la
noinst_HEADERS = migrate.h ccmigrate.h cachemigrate.h
libmigrate_la_SOURCES = migrate.cpp ccmigrate.cpp cachemigrate.cpp
KDE_CXXFLAGS = $(USE_EXCEPTIONS) $(USE_RTTI)
